Source/WebCore/dom/ActiveDOMCallbackMicrotask.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2015 Apple Inc. All rights reserved.
+ * Copyright (C) 2015, 2016 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -23,19 +23,18 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#ifndef ActiveDOMCallbackMicrotask_h
-#define ActiveDOMCallbackMicrotask_h
+#pragma once
 
 #include "ActiveDOMCallback.h"
 #include "Microtasks.h"
-#include <functional>
+#include <wtf/NoncopyableFunction.h>
 
 namespace WebCore {
 
 class ActiveDOMCallbackMicrotask final : public Microtask, public ActiveDOMCallback {
     WTF_MAKE_FAST_ALLOCATED;
 public:
-    WEBCORE_EXPORT ActiveDOMCallbackMicrotask(MicrotaskQueue&, ScriptExecutionContext&, std::function<void()>&&);
+    WEBCORE_EXPORT ActiveDOMCallbackMicrotask(MicrotaskQueue&, ScriptExecutionContext&, NoncopyableFunction<void()>&&);
     WEBCORE_EXPORT virtual ~ActiveDOMCallbackMicrotask();
 
     Result run() override;
@@ -47,9 +46,7 @@ private:
     // be accessed via the ScriptExecutionContext, which should hold a reference to the relevent
     // queue.
     MicrotaskQueue& m_queue;
-    std::function<void()> m_task;
+    NoncopyableFunction<void()> m_task;
 };
 
 } // namespace WebCore
-
-#endif // ActiveDOMCallbackMicrotask_h
