Source/WebCore/style/StyleTreeResolver.h
@@ -23,8 +23,7 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#ifndef StyleTreeResolver_h
-#define StyleTreeResolver_h
+#pragma once
 
 #include "RenderStyleConstants.h"
 #include "RenderTreePosition.h"
@@ -35,6 +34,7 @@
 #include "StyleUpdate.h"
 #include <functional>
 #include <wtf/HashMap.h>
+#include <wtf/NoncopyableFunction.h>
 #include <wtf/RefPtr.h>
 
 namespace WebCore {
@@ -110,7 +110,7 @@ private:
     std::unique_ptr<Update> m_update;
 };
 
-void queuePostResolutionCallback(std::function<void ()>);
+void queuePostResolutionCallback(NoncopyableFunction<void ()>&&);
 bool postResolutionCallbacksAreSuspended();
 
 bool isPlaceholderStyle(const RenderStyle&);
@@ -124,5 +124,3 @@ public:
 }
 
 }
-
-#endif
